--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "hono": "^4.4.10"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@cloudflare/workers-types": "^4.20240529.0",
     "wrangler": "^3.57.2"
   }
