--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.4.10"
+    "hono": "^4.4.10",
+    "superjson": "^2.2.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
