--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "src",
   "scripts": {
     "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts"
+    "deploy": "wrangler deploy --minify src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "hono": "^4.4.10",
@@ -11,6 +12,9 @@
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@cloudflare/workers-types": "^4.20240529.0",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
     "wrangler": "^3.57.2"
   }
 }
