--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "hono": "^4.4.10",
-    "superjson": "^2.2.1"
+    "hono": "^4.4.10"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
